@@ -14,6 +14,9 @@ extern void const_pi(mpf_t pi, unsigned long prec);
 extern void const_log2(mpf_t logn, unsigned long prec);
 extern void free_float_constants(void);
 extern void free_borwein_zeta(void);
+extern void free_bernoulli(void);
+
+extern void bernvec(const mpz_t **N, const mpz_t **D, unsigned long n);
 
 extern char* bernreal(mpz_t zn, unsigned long prec);
 extern char* harmreal(mpz_t zn, unsigned long prec);
